Use double buffering
Although for 4K it is useless on such a device :(

Signed-off-by: Artem Senichev <artemsen@gmail.com>

--- a/slideshow/meson.build
+++ b/slideshow/meson.build
@@ -7,6 +7,7 @@ project(
     'c_std=c99',
     'warning_level=3',
     'buildtype=release',
+    'b_ndebug=if-release',
   ],
   license: 'MIT',
   version: '1.0',
